finishing the web version

--- a/Local Version/index.html
+++ b/Local Version/index.html
@@ -249,7 +249,7 @@
                 <label for="c27" style="color:white;"> Hudson Sign </label>
                 <br>
                 <input type="checkbox" class="group-list" id="c28" value="Cherry"
-                    onclick="openSingleMarker('c28', 'Cherry')">
+                    onclick="openSingleMarker('c28', 'Cherry-blossom tree')">
                 <label for="c28" style="color:white;"> Cherry </label>
                 <br>
 
