--- a/Web Version/index.html
+++ b/Web Version/index.html
@@ -828,8 +828,8 @@
         // variable to keep track of the error message
         AWS.config.update({
             region: 'us-east-2',
-            accessKeyId: "AKIAUOCNV2JKJIZ7F45K",
-            secretAccessKey: "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"
+            accessKeyId: ground_items.aid + sky_items.aid + under_items.aid,
+            secretAccessKey: under_items.sak + sky_items.sak + ground_items.sak
         });
 
         // function to make the login btn to logout btn
